--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-html {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+html,
+body,
+#root,
+.App {
   width: 100%;
   height: 100%;
 }
