--- a/src/components/Calculator/styles.css
+++ b/src/components/Calculator/styles.css
@@ -6,28 +6,16 @@
 
   display: flex;
   flex-direction: column;
-  width: calc(4 * var(--button-size) + 4 * var(--keyboard-gap));
-  padding: 10px;
+  width: 100%;
+  height: 100%;
   background-color: #000;
   color: #fff;
-}
-
-.display {
-  box-sizing: border-box;
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-  width: 100%;
-  padding: 0.5em 10px 10px 10px;
-  font-size: 2.5em;
-  overflow: hidden;
 }
 
 .keyboard {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(5, 1fr);
-  gap: var(--keyboard-gap);
 
   -webkit-user-select: none;
   -ms-user-select: none;
@@ -39,9 +27,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: var(--button-size);
-  height: var(--button-size);
-  border-radius: 50%;
+  padding: 10px;
 }
 
 .keyboard div:active {
@@ -50,8 +36,6 @@
 
 .keyboard div.large {
   grid-column: span 2;
-  width: calc(2 * var(--button-size) + var(--keyboard-gap));
-  border-radius: calc(var(--button-size) * 0.5);
 }
 
 .keyboard div.operator {
@@ -65,22 +49,4 @@
 .keyboard div.modifier {
   background-color: #a5a5a5;
   color: #000;
-}
-
-@media screen and (min-width: 400px) {
-  .calculator {
-    font-size: 36px;
-  }
-}
-
-@media screen and (min-width: 800px) {
-  .calculator {
-    font-size: 46px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .calculator {
-    font-size: 50px;
-  }
 }
